--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "psr-4": {
         "App\\": "src/",
         "Controller\\": "src/controllers",
-        "Karnel\\": "src/karnel",
-        "Layout\\": "src/karnel/layout",
-        "Database\\": "src/karnel/database",
+        "Kernel\\": "src/kernel",
+        "Layout\\": "src/kernel/layout",
+        "Database\\": "src/kernel/database",
         "Model\\": "src/models",
         "View\\": "src/views"
         
